<resources>
    <string name="app_name" translatable="false" >HWA DA</string>
    <string name="saturdayVal" translatable="false" >saturday</string>
    <string name="sundayVal" translatable="false" >sunday</string>
    <string name="mondayVal" translatable="false" >monday</string>
    <string name="tuesdayVal" translatable="false">tuesday</string>
    <string name="wednesdayVal" translatable="false">wednesday</string>
    <string name="thursdayVal" translatable="false">thursday</string>
    <string name="fridayVal" translatable="false">friday</string>
    <string name="workingTimesVal" translatable="false">workingTimes</string>
    <string name="userVal" translatable="false" >user</string>
    <string name="adVal" translatable="false">ad</string>
    <string name="tagVal" translatable="false">tag</string>
    <string name="fromVal" translatable="false">from</string>
    <string name="toVal" translatable="false">to</string>
    <string name="editModeVal" translatable="false">edit</string>
    <string name="newModeVal" translatable="false">new</string>
    <string name="modeVal" translatable="false">mode</string>
    <string name="categoryVal" translatable="false">category</string>
    <string name="subCategoryVal" translatable="false">subCategory</string>
    <string name="subSubCategoryVal" translatable="false">subSubCategory</string>
    <string name="homeVal" translatable="false">home</string>
    <string name="chatVal" translatable="false">chat</string>
    <string name="favVal" translatable="false">fav</string>
    <string name="accountVal" translatable="false">account</string>
    <string name="targetVal" translatable="false">target</string>
    <string name="theClosestVal" translatable="false">The closest</string>
    <string name="ratingVal" translatable="false">Rating</string>
    <string name="updateDateVal" translatable="false">Date</string>
    <string name="theExpensiveVal" translatable="false">The Expensive</string>
    <string name="filterViewModel" translatable="false">filterViewModel</string>
    <string name="statusVal" translatable="false">Status :</string>
    <string name="openVal" translatable="false"> Open</string>
    <string name="filterVal" translatable="false">filter</string>
    <string name="onlineVal" translatable="false">online</string>
    <string name="receiver" translatable="false">receiver</string>
    <string name="posVal" translatable="false">pos</string>
    <string name="imagesUrlVal" translatable="false">imagesUrl</string>
    <string name="status" >Status :</string>
    <string name="open"> Open</string>
    <string name="imageVal" translatable="false">image</string>
    <string-array name="daysVal" translatable="false">
        <item>saturday</item>
        <item>sunday</item>
        <item>monday</item>
        <item>tuesday</item>
        <item>wednesday</item>
        <item>thursday</item>
        <item>friday</item>
    </string-array>
    <string name="username_hint"><font size="15">UserName</font></string>
    <string name="email_hint"><font size="15">Email</font></string>
    <string name="phone_hint"><font size="15">Phone</font></string>
    <string name="password_hint"><font size="15">Password</font></string>
    <string name="confirm_password_hint"><font size="15">Confirm Password</font></string>
    <string name="signup">SignUp</string>
    <string name="already_have_account"><font size="13">Already have account</font></string>
    <string name="login_link"><font size="15"><u>login</u></font></string>
    <string name="signUp_link" translatable="false"><font size="15"><u>signUp</u></font></string>
    <string name="not_having_account" translatable="false">don\'t have account</string>
    <string name="login">Login</string>
    <string name="clientId">1067559738190-ap4407n27030u1r0lq48i6jpe90m34hi.apps.googleusercontent.com</string>
    <string name="conWithGoogle"><font size="15">Continue with google</font></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yourAddress"><font size="15">your address</font></string>
    <string name="whatDoYouWant"><font size="15">what do you want</font></string>
    <string name="homeFood"><font size="12">Home food</font></string>
    <string name="worker"><font size="12">Worker</font></string>
    <string name="freelance"><font size="12">Freelance</font></string>
    <string name="handcraft"><font size="12">Handcraft</font></string>
    <string name="title">title</string>
    <string name="jop"><font size="18">jop</font></string>
    <string name="km">km</string>
    <string name="withInRange">In range of</string>
    <string name="title_activity_map">Map</string>
    <string name="loadingYourLocation"><font size="15">Loading Your Location ...</font></string>
    <string name="save">save</string>
    <string name="home">home</string>
    <string name="account">account</string>
    <string name="chat">chat</string>
    <string name="favorites">favorites</string>
    <string name="myAds">My Ads</string>
    <string name="helpAndSupport">Help \&amp; support  </string>
    <string name="language">Language</string>
    <string name="joinBlueMemberShip">Join blue Membership</string>
    <string name="cancelSubscription">Cancel subscription</string>
    <string name="logOut">Log out</string>
    <string name="viewAndEditProfile"><font size="18"><u>View and edit profile</u></font></string>
    <string name="blue">Blue</string>
    <string name="electrical">Electrical</string>
    <string name="ceramic_Worker">Ceramic worker</string>
    <string name="upholsterers">Upholsterers</string>
    <string name="builder">Builder</string>
    <string name="carpenter">Carpenter</string>
    <string name="painter">Painter</string>
    <string name="plasterer">Plasterer</string>
    <string name="technical">Technical</string>
    <string name="plumber">Plumber</string>
    <string name="other">other</string>
    <string name="maid">Maid</string>
    <string name="nurse">Nurse</string>
    <string name="delivery">Delivery</string>
    <string name="ride">Ride</string>
    <string name="car">Car</string>
    <string name="bus">Bus</string>
    <string name="on_foot">On foot</string>
    <string name="cycle">Cycle</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="tricycle">Tricycle</string>
    <string name="mini_van">Mini van</string>
    <string name="van">van</string>
    <string name="comments"><b>Comments</b></string>
    <string name="comment">Comment</string>
    <string name="AddAComment"><font size="15">Add a comment...</font></string>
    <string name="username">username</string>
    <string name="what_are_you_offering">What are you offering</string>
    <string name="uploadUpTo10Photos">UPLOAD UP TO 10 PHOTOS</string>
    <string name="addImages">Add images</string>
    <string name="tabOnIMages">tap on images to edit them or press , hold and move for reordering</string>
    <string name="remove">Remove</string>
    <string name="cancel">cancel</string>
    <string name="limitReached">Limit reached</string>
    <string name="alertLimitReached">You can only upload 10 images</string>
    <string name="price">Price *</string>
    <string name="adTitle">Ad Title *</string>
    <string name="adDescription">Ad Description *</string>
    <string name="workingTime">Working Time *</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="next">Next</string>
    <string name="emptyFieldWarning">field can\'t be empty </string>
    <string name="toShortWarning">to short</string>
    <string name="invalidData">Invalid data</string>
    <string name="imagesListEmptyWarning">you must choose at least one image </string>
    <string name="instructionsWorkTime">select working days , Add available working hours </string>
    <string name="edit">edit</string>
    <string name="add">add</string>
    <string name="addPeriod">add period</string>
    <string name="workingTimeMaxError">you can\'t add more than 3 periods</string>
    <string name="applyTo">Apply to :</string>
    <string name="failed">Failed</string>
    <string name="checkBoxError">you must at least select one day</string>
    <string name="periodError">you must at least add on period</string>
    <string name="pickTimeEmptyError">period can\'t be empty please click on the empty oval button and pick a time</string>
    <string name="workingTimePreviewSwitchesOfError">you must have at least one day</string>
    <string name="yourName">your name *</string>
    <string name="somethingAboutU">something about you *</string>
    <string name="gender">gender *</string>
    <string name="basicInfo"><b>Basic Information</b></string>
    <string name="contactInfo"><b>Contact Information</b></string>
    <string name="phoneNumber">phone number *</string>
    <string name="deleteThisAccount"><b>Delete this account</b> </string>
    <string name="deleteAcoountWarning">Are you sure you want to delete this account</string>
    <string name="deleteAccountConfirmation">Yes , delete this account</string>
    <string name="delete">delete</string>
    <string name="savingData">Saving data…</string>
    <string name="savingError">Failed to Update … please try again</string>
    <string name="addingNewAd">Adding new add…</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="description"><b>Description</b></string>
    <string name="reviews"><b>Reviews</b></string>
    <string name="workingTimeTitle"><b>Working time</b></string>
    <string name="reviewNote">You must at least add rating to add comment * </string>
    <string name="addingNewReview">Adding new review…</string>
    <string name="report">report</string>
    <string name="similarAds"><b>Similar Ads</b></string>
    <string name="toLong">to long</string>
    <string name="updatingReview">Updating review</string>
    <string name="call">call</string>
    <string name="warning">Warning</string>
    <string name="unCompletedProfile">Please complete your profile first</string>
    <string name="toProfile">Complete my Profile</string>
    <string name="message"><font size="18">Message</font> </string>
    <string name="noMessages">No messages</string>
    <string name="addCaption">Add a caption..</string>
    <string-array name="spinner_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="photo">Photo</string>
    <string name="locationPermissionWarning">Location permission is required for app to worked well.</string>
    <string name="cameraPermissionWarning">Camera permission is required to use camera functionality.</string>
    <string name="storagePermissionWarning">Storage permission is required for app to worked well.</string>
    <string name="faildToLoadYourLocation">failed To Load Your Location</string>
    <string name="googleServicesWarning">Google service not available on this device</string>
    <string name="unsupportedLocation">we will support your location soon</string>
    <string name="joinAt">join Hwada in </string>
    <string name="lastSeen">last seen </string>
    <string name="stop">stop</string>
    <string name="loadingImagesInstruction">Loading your Images ...</string>
    <string name="failedToLoadImages">Failed to load Images .. Please check your connection and try again</string>
    <string name="sortBy">Sort by :</string>
    <string name="theClosest">The closest</string>
    <string name="rating">Rating</string>
    <string name="updateDate">Date</string>
    <string name="apply">Apply</string>
    <string name="theExpensive">The Expensive</string>
</resources>