<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackGround"
    android:id="@+id/sign_up_main_constraint_layout"
    tools:context=".ui.auth.SignUp">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/app_name"

        android:textColor="@color/white"
        android:textSize="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/sign_up_main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="10dp"
        android:background="@drawable/white_background"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingTop="20dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">



            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/user_icon"
                android:drawablePadding="10dp"
                android:hint="@string/username_hint"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:paddingLeft="5dp" />


            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:drawableLeft="@drawable/email_icon"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp"
                android:layout_marginTop="20dp" />


            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_hint"
                android:drawableLeft="@drawable/phone_icon"
                android:drawablePadding="10dp"
                android:inputType="phone"
                android:layout_marginTop="20dp"
                android:paddingLeft="5dp" />

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:drawableLeft="@drawable/password_icon"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/et_conf_Pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/password_icon"
                android:drawablePadding="10dp"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:paddingLeft="5dp" />

            <Button
            android:id="@+id/bt_sign_up"
            android:layout_width="match_parent"
            android:background="@drawable/layout_design_curve"
            android:backgroundTint="@color/mainBackGround"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_link"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/background" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/layout_design_curve"
                android:drawableLeft="@drawable/google_icon"
                android:drawablePadding="10sp"
                android:textAllCaps="false"
                android:padding="13dp"

                android:text="@string/conWithGoogle"
                android:textColor="@color/black"
                android:textSize="20dp" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>