<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context=".ui.view.FilterFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
      android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/black"
          android:textSize="15dp"
          android:paddingTop="10dp"
          android:paddingStart="10dp"
          android:text="@string/sortBy"/>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:layout_marginStart="10dp"
         android:orientation="vertical">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <RadioButton
                 android:id="@+id/rb_update_date_filter_fragment"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="@string/updateDate"
                 android:textColor="@color/black"
                 android:textSize="15dp"/>

             <RadioButton
                 android:id="@+id/rb_the_cheapest_filter_fragment"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="@string/theCheapest"
                 android:textColor="@color/black"
                 android:textSize="15dp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <RadioButton
                 android:id="@+id/rb_rating_filter_fragment"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/rating"
                 android:textColor="@color/black"
                 android:textSize="15dp"/>
             <RadioButton
                 android:id="@+id/rb_the_expensive_filter_fragment"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="@string/theExpensive"
                 android:textColor="@color/black"
                 android:textSize="15dp"/>
         </LinearLayout>


        <RadioButton
            android:id="@+id/rb_the_closest_filter_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theClosest"
            android:textColor="@color/black"
            android:textSize="15dp"/>

     </LinearLayout>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingTop="10dp"
           android:paddingStart="10dp"
           android:textColor="@color/black"
           android:textSize="15dp"
           android:text="@string/status"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:layout_marginStart="10dp"
             android:orientation="vertical">

             <CheckBox
                 android:id="@+id/cb_ad_status_filter_fragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/open"
                 android:textColor="@color/black"
                 android:textSize="15dp"/>

         </LinearLayout>

         <Button
             android:id="@+id/bu_apply_filter_fragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:minHeight="0dp"
             android:minWidth="0dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:paddingEnd="10dp"
             android:paddingStart="10dp"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="15dp"
             android:layout_gravity="end"
             android:background="@drawable/button_save_blue"
             android:foreground="?attr/selectableItemBackground"
             android:text="@string/apply"/>

     </LinearLayout>

</FrameLayout>