<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:background="@drawable/white_background"
    tools:context=".ui.view.category.WorkerCategoryFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_background"

        android:orientation="vertical">

    <ImageView
        android:id="@+id/arrow_worker_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:src="@drawable/arrow_down" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="40dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
           >

            <TextView
                android:id="@+id/plumber_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plumber"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/technical_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/technical"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/plasterer_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plasterer"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/painter_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/painter"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/electrical_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/electrical"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/carpenter_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carpenter"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/builder_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/builder"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/upholsterers_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upholsterers"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/ceramic_Worker_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ceramic_Worker"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/other_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                />

        </LinearLayout>
        </ScrollView>
  </LinearLayout>
</FrameLayout>