<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/white_background"
tools:context=".ui.view.category.DeliveryFragment">

<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/arrow_ride_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:src="@drawable/arrow_down" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="40dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <TextView
                android:id="@+id/on_foot_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/on_foot"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                />
            <TextView
            android:id="@+id/cycle_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cycle"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            />   <TextView
            android:id="@+id/motorcycle_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motorcycle"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            />   <TextView
            android:id="@+id/tricycle_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tricycle"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            />   <TextView
            android:id="@+id/car_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            />
            <TextView
                android:id="@+id/mini_van_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mini_van"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/van_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/van"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/other_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
</FrameLayout>